Fix navbar alignment issues

--- a/main.css
+++ b/main.css
@@ -3,36 +3,35 @@ body {
 }
 
 .container {
-  margin: 0 auto;
   max-width: 90%;
+  margin: 0 auto;
   padding: 0 15px;
 }
+
 .navbar {
   display: flex;
   justify-content: space-between;
   padding: 65px 0;
-
-  margin: 0 auto;
 }
 
 .navbar .left {
-  font-family: 'Fjalla One', sans-serif;
-  letter-spacing: 5px;
-  font-size: 50px;
-  font-weight: bold;
+  font-family: 'Anton', sans-serif;
+  letter-spacing: 10px;
+  font-size: 40px;
   color: #d9376e;
-  text-shadow: 0 -3.5px #ff8e3c;
+  font-weight: bold;
 }
 
 .navbar .right {
-  width: 200px;
+  width: 140px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .right img {
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
 }
 
 .project-grid {
@@ -40,7 +39,6 @@ body {
   grid-template-areas:
     'project-1 project-2 project-3'
     'project-4 project-5 project-6';
-
   gap: 15px;
   width: 100%;
 }
@@ -71,7 +69,6 @@ body {
 
 .project {
   position: relative;
-  /* width: 300px; */
 }
 
 .project img {
@@ -83,7 +80,7 @@ body {
 
 .project .overlay {
   background-color: rgba(255, 255, 255, 0.5);
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Cabin', sans-serif;
   position: absolute;
   top: 0;
   left: 0;
@@ -107,7 +104,7 @@ body {
 }
 
 .footer {
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Cabin', sans-serif;
   text-align: center;
   padding: 64px;
 }
